--- a/frontend/revisions/css/revisions.css
+++ b/frontend/revisions/css/revisions.css
@@ -19,7 +19,8 @@ revisions {
 }
 
 .revisions-dropdown{
-  cursor:pointer;
+    cursor:pointer;
+    outline: none
 }
 
 /** Revisions Dialog *************************************************************************************************/
