--- a/frontend/issues/jade/issueComp.jade
+++ b/frontend/issues/jade/issueComp.jade
@@ -1,16 +1,19 @@
 #issueCompAll(layout="column", tabindex="0", tdr-focus="true", flex)
 	// Title
 	.issueCompItemContainer(layout="column", layout-align="start", flex)
-		md-input-container.issueComp(flex)
-			label Title
-			input(
-			type="text"
-			ng-model="$ctrl.issueData.name"
-			ng-change="$ctrl.nameChange()"
-			ng-disabled="$ctrl.data"
-			aria-label="Title"
-			tdr-focus="true"
-			required)
+		div(ng-if="!$ctrl.data", flex, layout="column")
+			md-input-container.issueComp(flex)
+				label Title
+				input(
+				type="text"
+				ng-model="$ctrl.issueData.name"
+				ng-change="$ctrl.nameChange()"
+				ng-disabled="$ctrl.data"
+				aria-label="Title"
+				tdr-focus="true"
+				required)
+		#issueCompTitle(ng-if="$ctrl.data")
+			label {{$ctrl.issueData.name}}
 		div(layout="row", layout-align="start center", flex="none")
 			div(flex="10")
 				md-icon.angular-material-icons#issueCompStatus(style="color:{{$ctrl.statusIcon.colour}}") {{$ctrl.statusIcon.icon}}
@@ -40,51 +43,58 @@
 
 	// Description
 	.issueCompItemContainer(layout="column", layout-align="start", flex)
-		div(
-		ng-click="$ctrl.showViewpointAndScreenShot($ctrl.issueData.viewpoint)"
-		ng-class="{issueDescriptionWithScreenShot: $ctrl.issueData.viewpoint.screenshot}"
-		layout="column"
-		layout-align="start"
-		flex)
-			md-input-container.issueComp(flex, ng-if="!$ctrl.hideDescription")
-				label Description
-				textarea(ng-model="$ctrl.issueData.desc", ng-disabled="$ctrl.data")
+		div(layout="column", layout-align="start", flex)
+			div(ng-if="!$ctrl.data", flex, layout="column")
+				md-input-container(flex, ng-if="!$ctrl.hideDescription")
+					label Description
+					textarea(ng-model="$ctrl.issueData.desc", ng-disabled="$ctrl.data")
+			#issueCompDescription(ng-if="$ctrl.data", layout="column", ng-click="$ctrl.showViewpoint($event, $ctrl.issueData.viewpoint)")
+				div(layout='row', layout-align="space-between", flex)
+					label#issueCompDescriptionText(ng-if="!$ctrl.editingDescription") {{$ctrl.issueData.desc}}
+					md-input-container(flex, ng-if="$ctrl.editingDescription")
+						textarea(ng-model="$ctrl.issueData.desc", aria-label="Description", tdr-focus="true")
+					.issueCompTextActions(layout="row", ng-if="$ctrl.canEditDescription")
+						md-button.md-icon-button.md-accent(aria-label="Edit Comment", ng-click="$ctrl.toggleEditDescription($event)")
+							md-tooltip(md-direction="bottom") edit
+							md-icon.angular-material-icons(style="color:{{$ctrl.editCommentColor}}") mode_edit
 			.issueCompThumbnail(
 			layout="row"
 			layout-align="center"
-			ng-if="$ctrl.descriptionThumbnail")
-				img(ng-src="{{$ctrl.descriptionThumbnail}}")
+			ng-if="$ctrl.descriptionThumbnail"
+			ng-click="$ctrl.showScreenShot($ctrl.issueData.viewpoint)")
+				img.issueCompThumbnailImage(ng-src="{{$ctrl.descriptionThumbnail}}")
 
 	// Comments
 	.issueCompItemContainer(layout="column", layout-align="start", flex, ng-if="$ctrl.issueData.comments.length>0")
-		.issueCompComment(
-		ng-repeat="comment in $ctrl.issueData.comments"
-		layout="column"
-		layout-align="start"
-		flex
-		ng-click="$ctrl.showViewpointAndScreenShot(comment.viewpoint)")
-			// Text and actions
-			div(layout='row', layout-align="space-between", flex)
-				label.issueCompCommentTitle {{comment.comment}}
-				.issueCompCommentActions(layout="row", ng-if="!comment.sealed")
-					md-button.md-icon-button.md-accent(aria-label="Edit Comment", ng-click="$ctrl.toggleEditComment($event, $index)")
-						md-tooltip(md-direction="bottom") edit
-						md-icon.angular-material-icons(style="color:{{$ctrl.editCommentColor}}") mode_edit
-					md-button.md-icon-button.md-accent(aria-label="Delete Comment", ng-click="$ctrl.deleteComment($event, $index)")
-						md-tooltip(md-direction="bottom") delete
-						md-icon.angular-material-icons close
-			// Info
-			.issueCompCommentOwner(ng-if="$ctrl.data", layout="row", layout-align="space-between", flex)
-				label {{comment.owner}}
-				label {{comment.timeStamp}}
+		div(ng-repeat="comment in $ctrl.issueData.comments", layout="column", layout-align="start", flex)
+			.issueCompComment(ng-click="$ctrl.showViewpoint($event, comment.viewpoint)", layout="column", layout-align="start", flex)
+				// Text and actions
+				div(layout='row', layout-align="space-between", flex)
+					label.issueCompCommentTitle {{comment.comment}}
+					.issueCompTextActions(layout="row", ng-if="!comment.sealed")
+						md-button.md-icon-button.md-accent(aria-label="Edit Comment", ng-click="$ctrl.toggleEditComment($event, $index)")
+							md-tooltip(md-direction="bottom") edit
+							md-icon.angular-material-icons(style="color:{{$ctrl.editCommentColor}}") mode_edit
+						md-button.md-icon-button.md-accent(aria-label="Delete Comment", ng-click="$ctrl.deleteComment($event, $index)")
+							md-tooltip(md-direction="bottom") delete
+							md-icon.angular-material-icons close
+				// Info
+				.issueCompCommentOwner(
+				ng-if="$ctrl.data"
+				layout="row"
+				layout-align="space-between"
+				flex)
+					label {{comment.owner}}
+					label {{comment.timeStamp}}
 
 			// Thumbnail
 			.issueCompThumbnail(
 			layout="row"
 			layout-align="center"
 			ng-if="comment.viewpoint.screenshot"
+			ng-click="$ctrl.showScreenShot(comment.viewpoint)"
 			flex)
-				img(ng-src="{{$ctrl.UtilsService.getServerUrl(comment.viewpoint.screenshot)}}")
+				img.issueCompThumbnailImage(ng-src="{{$ctrl.UtilsService.getServerUrl(comment.viewpoint.screenshot)}}")
 
 	// New comment
 	.issueCompItemContainer(layout="column", layout-align="start", flex, ng-if="$ctrl.data")
@@ -92,7 +102,7 @@
 			label Comment
 			textarea(ng-model="$ctrl.comment", ng-change="$ctrl.commentChange()")
 		.issueCompThumbnail(layout="row", layout-align="center", ng-if="$ctrl.commentThumbnail", ng-click="$ctrl.showThumbnail()")
-			img(ng-src="{{$ctrl.commentThumbnail}}")
+			img.issueCompThumbnailImage(ng-src="{{$ctrl.commentThumbnail}}")
 
 	// Footer
 	.issueCompItemContainer(layout="row", layout-align="space-between center")
