--- a/frontend/issues/jade/issuesList.jade
+++ b/frontend/issues/jade/issuesList.jade
@@ -1,7 +1,13 @@
 div(ng-switch="$ctrl.toShow")
 	// List
 	div(ng-switch-when="list")
-		.issueListItem(ng-repeat="issue in $ctrl.issuesToShow", layout="column", ng-click="$ctrl.select($event, issue)")
+		.issueListItem(
+		ng-repeat="issue in $ctrl.issuesToShow"
+		layout="column"
+		ng-click="$ctrl.select($event, issue)"
+		ng-mouseenter="$ctrl.setFocus($event, issue, $index)"
+		ng-mouseleave="$ctrl.removeFocus($event, issue)"
+		ng-class="{issueListItemFocus: issue.focus}")
 			#issuesListItemContent(layout='row')
 				.issueListItemThumbnail(flex="40", layout="column", layout-align="center center", ng-if="issue.thumbnail")
 					img(ng-src="{{$ctrl.UtilsService.getServerUrl(issue.thumbnail)}}")
