ISSUE #250 - Improved keydown stuff, moving in and out of issues working, multiselect improved

--- a/frontend/issues/jade/issues.jade
+++ b/frontend/issues/jade/issues.jade
@@ -34,6 +34,7 @@ tdr-progress(ng-if="vm.showProgress", info="vm.progressInfo")
 	ng-switch-when="showIssue"
 	account="vm.account"
 	project="vm.project"
+	tabindex="0"
 	data="vm.issueToEdit"
 	keys-down="vm.keysDown"
 	exit="vm.editIssueExit(issue)"
