#264 generate refund pdf and send email to users/sales

--- a/frontend/account/jade/accountBilling.jade
+++ b/frontend/account/jade/accountBilling.jade
@@ -96,7 +96,7 @@
 							md-input-container(flex="15")
 								input(type="text", value="{{billing.status}}", ng-disabled="true", aria-label="status")
 							md-input-container(flex="25")
-								input(type="text", value="{{billing.items[0].description}}", ng-disabled="true", aria-label="description")
+								input(type="text", value="{{billing.description}}", ng-disabled="true", aria-label="description")
 							md-input-container(flex="15")
 								input(type="text", value="{{billing.gateway}}", ng-disabled="true", aria-label="paymentMethod")
 							md-input-container(flex="10")
