--- a/frontend/issues/css/issues.css
+++ b/frontend/issues/css/issues.css
@@ -372,7 +372,6 @@ issue-comp .issueCompComment {
   margin: 10px 0;
 }
 
-issue-comp #issueCompDescriptionText,
 issue-comp .issueCompCommentTitle {
   margin: 10px 0;
 }
@@ -406,8 +405,14 @@ issue-comp #issueCompAdditional {
   margin-top: -20px;
 }
 
-issue-comp #issueCompFooter {
-  margin-top: -40px;
+issue-comp #issueCompNewComment {
+  margin-bottom: -40px;
+}
+
+issue-comp #descriptionAndComments {
+  overflow-y:auto;
+  overflow-x:hidden;
+  background: #f0f0f0;
 }
 
 /** Issue Screen Shot  ************************************************************************************************/
