--- a/frontend/issues/jade/issueComp.jade
+++ b/frontend/issues/jade/issueComp.jade
@@ -1,126 +1,133 @@
-#issueCompAll(layout="column", tabindex="0", tdr-focus="true", flex)
-	// Title
-	.issueCompItemContainer(layout="column", layout-align="start", flex)
-		div(ng-if="!$ctrl.data", flex, layout="column")
-			md-input-container.issueComp(flex)
-				label Title
-				input(
-				type="text"
-				ng-model="$ctrl.issueData.name"
-				ng-change="$ctrl.nameChange()"
-				ng-disabled="$ctrl.data"
-				aria-label="Title"
-				tdr-focus="true"
-				required)
-		#issueCompTitle(ng-if="$ctrl.data")
-			label {{$ctrl.issueData.name}}
-		div(layout="row", layout-align="start center", flex="none")
-			div(flex="10")
-				md-icon.angular-material-icons#issueCompStatus(style="color:{{$ctrl.statusIcon.colour}}") {{$ctrl.statusIcon.icon}}
-			.issueCompIssueOwner(ng-if="$ctrl.data", layout="row", layout-align="space-between", flex)
-				label {{$ctrl.data.owner}}
-				label {{$ctrl.data.timeStamp}}
-
-	// Status
-	.issueCompItemContainer#issueCompAdditional(layout="column")
-		div(layout="row", layout-align="start center")
-			md-button.md-icon-button#additionalInfoButton(aria-label="Status Toggle", ng-click="$ctrl.toggleShowAdditional()")
-				md-icon.angular-material-icons(ng-if="!$ctrl.showAdditional") keyboard_arrow_right
-				md-icon.angular-material-icons(ng-if="$ctrl.showAdditional") keyboard_arrow_down
-		div(layout="row", ng-if="$ctrl.showAdditional")
-			md-input-container.issueCompItemStatus(flex="30")
-				label Priority
-				md-select(ng-model="$ctrl.issueData.priority", ng-change="$ctrl.statusChange()", ng-disabled="!$ctrl.canUpdate")
-					md-option(ng-repeat="priority in $ctrl.priorities", value="{{priority.value}}") {{priority.label}}
-			md-input-container.issueCompItemStatus(flex)
-				label Status
-				md-select(ng-model="$ctrl.issueData.status", ng-change="$ctrl.statusChange()", ng-disabled="!$ctrl.canUpdate")
-					md-option(ng-repeat="status in $ctrl.statuses", value="{{status.value}}") {{status.label}}
-			md-input-container(flex)
-				label Type
-				md-select(ng-model="$ctrl.issueData.topic_type", ng-disabled="!$ctrl.canUpdate")
-					md-option(ng-repeat="type in $ctrl.topic_types", value="{{type.value}}") {{type.label}}
-
-	// Description
-	.issueCompItemContainer(layout="column", layout-align="start", flex)
-		div(layout="column", layout-align="start", flex)
+div(flex, layout="column", layout-fill)
+	div
+		// Title
+		.issueCompItemContainer(layout="column", layout-align="start", flex)
 			div(ng-if="!$ctrl.data", flex, layout="column")
-				md-input-container(flex, ng-if="!$ctrl.hideDescription")
-					label Description
-					textarea(ng-model="$ctrl.issueData.desc", ng-disabled="$ctrl.data")
-			#issueCompDescription(ng-if="$ctrl.data", layout="column", ng-click="$ctrl.showViewpoint($event, $ctrl.issueData.viewpoint)")
-				div(layout='row', layout-align="space-between", flex)
-					label#issueCompDescriptionText(ng-if="!$ctrl.editingDescription") {{$ctrl.issueData.desc}}
-					md-input-container(flex, ng-if="$ctrl.editingDescription")
-						textarea(ng-model="$ctrl.issueData.desc", aria-label="Description", tdr-focus="true")
-					.issueCompTextActions(layout="row", ng-if="$ctrl.canEditDescription")
-						md-button.md-icon-button.md-accent(aria-label="Edit Comment", ng-click="$ctrl.toggleEditDescription($event)")
-							md-tooltip(md-direction="bottom") edit
-							md-icon.angular-material-icons(style="color:{{$ctrl.editCommentColor}}") mode_edit
-			.issueCompThumbnail(
-			layout="row"
-			layout-align="center"
-			ng-if="$ctrl.descriptionThumbnail"
-			ng-click="$ctrl.showScreenShot($ctrl.issueData.viewpoint)")
-				img.issueCompThumbnailImage(ng-src="{{$ctrl.descriptionThumbnail}}")
+				md-input-container.issueComp(flex)
+					label Title
+					input(
+					type="text"
+					ng-model="$ctrl.issueData.name"
+					ng-change="$ctrl.nameChange()"
+					ng-disabled="$ctrl.data"
+					aria-label="Title"
+					tdr-focus="true"
+					required)
+			#issueCompTitle(ng-if="$ctrl.data")
+				label {{$ctrl.issueData.name}}
+			div(layout="row", layout-align="start center", flex="none")
+				div(flex="10")
+					md-icon.angular-material-icons#issueCompStatus(style="color:{{$ctrl.statusIcon.colour}}") {{$ctrl.statusIcon.icon}}
+				.issueCompIssueOwner(ng-if="$ctrl.data", layout="row", layout-align="space-between", flex)
+					label {{$ctrl.data.owner}}
+					label {{$ctrl.data.timeStamp}}
 
-	// Comments
-	.issueCompItemContainer(layout="column", layout-align="start", flex, ng-if="$ctrl.issueData.comments.length>0")
-		div(ng-repeat="comment in $ctrl.issueData.comments", layout="column", layout-align="start", flex)
-			.issueCompComment(ng-click="$ctrl.showViewpoint($event, comment.viewpoint)", layout="column", layout-align="start", flex)
-				// Text and actions
-				div(layout='row', layout-align="space-between", flex)
-					label.issueCompCommentTitle(ng-if="!comment.editing") {{comment.comment}}
-					md-input-container(flex, ng-if="comment.editing")
-						textarea(ng-model="comment.comment", aria-label="Description", tdr-focus="true")
-					.issueCompTextActions(layout="row", ng-if="!comment.sealed")
-						md-button.md-icon-button.md-accent(aria-label="Edit Comment", ng-click="$ctrl.toggleEditComment($event, $index)")
-							md-tooltip(md-direction="bottom") edit
-							md-icon.angular-material-icons(style="color:{{$ctrl.editCommentColor}}") mode_edit
-						md-button.md-icon-button.md-accent(aria-label="Delete Comment", ng-click="$ctrl.deleteComment($event, $index)")
-							md-tooltip(md-direction="bottom") delete
-							md-icon.angular-material-icons close
-				// Info
-				.issueCompCommentOwner(
-				ng-if="$ctrl.data"
+		// Status
+		.issueCompItemContainer#issueCompAdditional(layout="column")
+			div(layout="row", layout-align="start center")
+				md-button.md-icon-button#additionalInfoButton(aria-label="Status Toggle", ng-click="$ctrl.toggleShowAdditional()")
+					md-icon.angular-material-icons(ng-if="!$ctrl.showAdditional") keyboard_arrow_right
+					md-icon.angular-material-icons(ng-if="$ctrl.showAdditional") keyboard_arrow_down
+			div(layout="row", ng-if="$ctrl.showAdditional")
+				md-input-container.issueCompItemStatus(flex="30")
+					label Priority
+					md-select(ng-model="$ctrl.issueData.priority", ng-change="$ctrl.statusChange()", ng-disabled="!$ctrl.canUpdate")
+						md-option(ng-repeat="priority in $ctrl.priorities", value="{{priority.value}}") {{priority.label}}
+				md-input-container.issueCompItemStatus(flex)
+					label Status
+					md-select(ng-model="$ctrl.issueData.status", ng-change="$ctrl.statusChange()", ng-disabled="!$ctrl.canUpdate")
+						md-option(ng-repeat="status in $ctrl.statuses", value="{{status.value}}") {{status.label}}
+				md-input-container(flex)
+					label Type
+					md-select(ng-model="$ctrl.issueData.topic_type", ng-disabled="!$ctrl.canUpdate")
+						md-option(ng-repeat="type in $ctrl.topic_types", value="{{type.value}}") {{type.label}}
+
+	md-divider
+
+	#descriptionAndComments(flex)
+		// Description
+		.issueCompItemContainer(layout="column", layout-align="start", flex)
+			div(layout="column", layout-align="start", flex)
+				div(ng-if="!$ctrl.data", flex, layout="column")
+					md-input-container(flex, ng-if="!$ctrl.hideDescription")
+						label Description
+						textarea(ng-model="$ctrl.issueData.desc", ng-disabled="$ctrl.data")
+				#issueCompDescription(ng-if="$ctrl.data", layout="column", ng-click="$ctrl.showViewpoint($event, $ctrl.issueData.viewpoint)")
+					div(layout='row', layout-align="space-between", flex)
+						label(ng-if="!$ctrl.editingDescription") {{$ctrl.issueData.desc}}
+						md-input-container(flex, ng-if="$ctrl.editingDescription")
+							textarea(ng-model="$ctrl.issueData.desc", aria-label="Description", tdr-focus="true")
+						.issueCompTextActions(layout="row", ng-if="$ctrl.canEditDescription")
+							md-button.md-icon-button.md-accent(aria-label="Edit Comment", ng-click="$ctrl.toggleEditDescription($event)")
+								md-tooltip(md-direction="bottom") edit
+								md-icon.angular-material-icons(style="color:{{$ctrl.editCommentColor}}") mode_edit
+				.issueCompThumbnail(
 				layout="row"
-				layout-align="space-between"
+				layout-align="center"
+				ng-if="$ctrl.descriptionThumbnail"
+				ng-click="$ctrl.showScreenShot($ctrl.issueData.viewpoint)")
+					img.issueCompThumbnailImage(ng-src="{{$ctrl.descriptionThumbnail}}")
+
+		// Comments
+		.issueCompItemContainer(layout="column", layout-align="start", flex, ng-if="$ctrl.issueData.comments.length>0")
+			div(ng-repeat="comment in $ctrl.issueData.comments", layout="column", layout-align="start", flex)
+				.issueCompComment(ng-click="$ctrl.showViewpoint($event, comment.viewpoint)", layout="column", layout-align="start", flex)
+					// Text and actions
+					div(layout='row', layout-align="space-between", flex)
+						label.issueCompCommentTitle(ng-if="!comment.editing") {{comment.comment}}
+						md-input-container(flex, ng-if="comment.editing")
+							textarea(ng-model="comment.comment", aria-label="Description", tdr-focus="true")
+						.issueCompTextActions(layout="row", ng-if="!comment.sealed")
+							md-button.md-icon-button.md-accent(aria-label="Edit Comment", ng-click="$ctrl.toggleEditComment($event, $index)")
+								md-tooltip(md-direction="bottom") edit
+								md-icon.angular-material-icons(style="color:{{$ctrl.editCommentColor}}") mode_edit
+							md-button.md-icon-button.md-accent(aria-label="Delete Comment", ng-click="$ctrl.deleteComment($event, $index)")
+								md-tooltip(md-direction="bottom") delete
+								md-icon.angular-material-icons close
+					// Info
+					.issueCompCommentOwner(
+					ng-if="$ctrl.data"
+					layout="row"
+					layout-align="space-between"
+					flex)
+						label {{comment.owner}}
+						label {{comment.timeStamp}}
+
+				// Thumbnail
+				.issueCompThumbnail(
+				layout="row"
+				layout-align="center"
+				ng-if="comment.viewpoint.screenshot"
+				ng-click="$ctrl.showScreenShot(comment.viewpoint)"
 				flex)
-					label {{comment.owner}}
-					label {{comment.timeStamp}}
+					img.issueCompThumbnailImage(ng-src="{{$ctrl.UtilsService.getServerUrl(comment.viewpoint.screenshot)}}")
 
-			// Thumbnail
-			.issueCompThumbnail(
-			layout="row"
-			layout-align="center"
-			ng-if="comment.viewpoint.screenshot"
-			ng-click="$ctrl.showScreenShot(comment.viewpoint)"
-			flex)
-				img.issueCompThumbnailImage(ng-src="{{$ctrl.UtilsService.getServerUrl(comment.viewpoint.screenshot)}}")
+	md-divider
 
-	// New comment
-	.issueCompItemContainer(layout="column", layout-align="start", flex, ng-if="$ctrl.data")
-		md-input-container.issueComp(flex)
-			label Comment
-			textarea(ng-model="$ctrl.comment", ng-change="$ctrl.commentChange()")
-		.issueCompThumbnail(layout="row", layout-align="center", ng-if="$ctrl.commentThumbnail", ng-click="$ctrl.showThumbnail()")
-			img.issueCompThumbnailImage(ng-src="{{$ctrl.commentThumbnail}}")
+	div
+		// New comment
+		.issueCompItemContainer#issueCompNewComment(layout="column", layout-align="start", flex, ng-if="$ctrl.data")
+			md-input-container.issueComp(flex)
+				label Comment
+				textarea(ng-model="$ctrl.comment", ng-change="$ctrl.commentChange()")
+			.issueCompThumbnail(layout="row", layout-align="center", ng-if="$ctrl.commentThumbnail", ng-click="$ctrl.showThumbnail()")
+				img.issueCompThumbnailImage(ng-src="{{$ctrl.commentThumbnail}}")
 
-	// Footer
-	.issueCompItemContainer#issueCompFooter(layout="row", layout-align="space-between center")
-		div
-			md-button.md-icon-button(
-			ng-repeat="action in $ctrl.actions"
-			aria-label="{{action.icon}}"
-			ng-click="$ctrl.doAction($index)"
-			ng-if="!action.hidden")
-				md-tooltip(md-direction="bottom") {{action.label}}
-				md-icon.angular-material-icons(style="color:{{action.color}}") {{action.icon}}
+		// Footer
+		.issueCompItemContainer(layout="row", layout-align="space-between center")
+			div
+				md-button.md-icon-button(
+				ng-repeat="action in $ctrl.actions"
+				aria-label="{{action.icon}}"
+				ng-click="$ctrl.doAction($index)"
+				ng-if="!action.hidden")
+					md-tooltip(md-direction="bottom") {{action.label}}
+					md-icon.angular-material-icons(style="color:{{action.color}}") {{action.icon}}
 
-		div
-			md-button.md-fab.md-mini(aria-label="Submit", ng-disabled="$ctrl.submitDisabled", ng-click="$ctrl.submit()")
-				md-tooltip(md-direction="bottom") Submit
-				md-icon.angular-material-icons save
+			div
+				md-button.md-fab.md-mini(aria-label="Submit", ng-disabled="$ctrl.submitDisabled", ng-click="$ctrl.submit()")
+					md-tooltip(md-direction="bottom") Submit
+					md-icon.angular-material-icons save
 
 	// Action components
 	div(ng-switch="$ctrl.action")
