#250 import/export bcf buttons

--- a/frontend/issues/css/issues.css
+++ b/frontend/issues/css/issues.css
@@ -74,6 +74,9 @@ issues #issuesContent {
   overflow-x: hidden;
 }
 
+issues .importBCFLoading {
+  margin: 10px auto;
+}
 /** Issue *************************************************************************************************************/
 issue {
   display: block;
