--- a/frontend/account/jade/uploadProjectDialog.jade
+++ b/frontend/account/jade/uploadProjectDialog.jade
@@ -17,7 +17,7 @@ md-dialog.newProjectDialog(aria-label="New project")
 
 			md-input-container
 				md-button.md-accent(ng-click="vm.selectFile()") Select File
-				md-button.md-raised.md-accent(ng-disabled="vm.newProjectButtonDisabled", ng-click="vm.uploadFile()") Upload
+				md-button.md-raised.md-accent(ng-disabled="vm.uploadButtonDisabled", ng-click="vm.uploadFile()") Upload
 
 			p#projectDialogError(ng-if="vm.uploadErrorMessage") {{vm.uploadErrorMessage}}
 			
