ISSUE #250 - Improved issue selection and pin highlighting

--- a/frontend/issues/jade/issues.jade
+++ b/frontend/issues/jade/issues.jade
@@ -20,25 +20,24 @@ md-progress-circular.importBCFLoading(md-mode="indeterminate", md-diameter="15",
 	ng-switch-when="showIssues"
 	account="vm.account"
 	project="vm.project"
-	tabindex="0"
 	all-issues="vm.issues"
 	filter-text="vm.filterText"
 	send-event="vm.sendEvent(type, value)"
 	import-bcf="vm.importBcf(file)"
 	event="vm.event"
 	on-edit-issue="vm.editIssue(issue)"
+	on-select-issue="vm.selectIssue(issue)"
 	keys-down="vm.keysDown"
-	non-list-select="vm.selectIssue"
 	content-height="vm.setContentHeight(height)"
-	menu-option="vm.selectedMenuOption")
+	menu-option="vm.selectedMenuOption"
+	selected-issue="vm.selectedIssue")
 
 	// Issue
 	issue-comp(
 	ng-switch-when="showIssue"
 	account="vm.account"
 	project="vm.project"
-	tabindex="0"
-	data="vm.issueToEdit"
+	data="vm.selectedIssue"
 	keys-down="vm.keysDown"
 	exit="vm.editIssueExit(issue)"
 	send-event="vm.sendEvent(type, value)"
