--- a/frontend/issues/jade/issuesList.jade
+++ b/frontend/issues/jade/issuesList.jade
@@ -1,4 +1,4 @@
-div(ng-switch="$ctrl.toShow")
+div(ng-switch="$ctrl.toShow", tabindex="0", tdr-focus="true")
 	// List
 	div(ng-switch-when="list")
 		.issueListItem(
