--- a/frontend/issues/jade/issueComp.jade
+++ b/frontend/issues/jade/issueComp.jade
@@ -1,4 +1,4 @@
-div(flex, layout="column", layout-fill)
+div(flex, layout="column", layout-fill, tabindex="0", tdr-focus="true")
 	div
 		// Title
 		.issueCompItemContainer(layout="column", layout-align="start", flex)
@@ -51,12 +51,21 @@ div(flex, layout="column", layout-fill)
 				div(ng-if="!$ctrl.data", flex, layout="column")
 					md-input-container(flex, ng-if="!$ctrl.hideDescription")
 						label Description
-						textarea(ng-model="$ctrl.issueData.desc", ng-disabled="$ctrl.data")
+						textarea(
+						ng-model="$ctrl.issueData.desc"
+						ng-disabled="$ctrl.data"
+						ng-focus="$ctrl.textInputHasFocus(true)"
+						ng-blur="$ctrl.textInputHasFocus(false)")
 				#issueCompDescription(ng-if="$ctrl.data", layout="column", ng-click="$ctrl.showViewpoint($event, $ctrl.issueData.viewpoint)")
 					div(layout='row', layout-align="space-between", flex)
 						label(ng-if="!$ctrl.editingDescription") {{$ctrl.issueData.desc}}
 						md-input-container(flex, ng-if="$ctrl.editingDescription")
-							textarea(ng-model="$ctrl.issueData.desc", aria-label="Description", tdr-focus="true")
+							textarea(
+							ng-model="$ctrl.issueData.desc"
+							aria-label="Description"
+							tdr-focus="true"
+							ng-focus="$ctrl.textInputHasFocus(true)"
+							ng-blur="$ctrl.textInputHasFocus(false)")
 						.issueCompTextActions(layout="row", ng-if="$ctrl.canEditDescription")
 							md-button.md-icon-button.md-accent(aria-label="Edit Comment", ng-click="$ctrl.toggleEditDescription($event)")
 								md-tooltip(md-direction="bottom") edit
@@ -76,7 +85,12 @@ div(flex, layout="column", layout-fill)
 					div(layout='row', layout-align="space-between", flex)
 						label.issueCompCommentTitle(ng-if="!comment.editing") {{comment.comment}}
 						md-input-container(flex, ng-if="comment.editing")
-							textarea(ng-model="comment.comment", aria-label="Description", tdr-focus="true")
+							textarea(
+							ng-model="comment.comment"
+							aria-label="Description"
+							tdr-focus="true"
+							ng-focus="$ctrl.textInputHasFocus(true)"
+							ng-blur="$ctrl.textInputHasFocus(false)")
 						.issueCompTextActions(layout="row", ng-if="!comment.sealed")
 							md-button.md-icon-button.md-accent(aria-label="Edit Comment", ng-click="$ctrl.toggleEditComment($event, $index)")
 								md-tooltip(md-direction="bottom") edit
@@ -109,7 +123,11 @@ div(flex, layout="column", layout-fill)
 		.issueCompItemContainer#issueCompNewComment(layout="column", layout-align="start", flex, ng-if="$ctrl.data")
 			md-input-container.issueComp(flex)
 				label Comment
-				textarea(ng-model="$ctrl.comment", ng-change="$ctrl.commentChange()")
+				textarea(
+				ng-model="$ctrl.comment"
+				ng-change="$ctrl.commentChange()"
+				ng-focus="$ctrl.textInputHasFocus(true)"
+				ng-blur="$ctrl.textInputHasFocus(false)")
 			.issueCompThumbnail(layout="row", layout-align="center", ng-if="$ctrl.commentThumbnail", ng-click="$ctrl.showThumbnail()")
 				img.issueCompThumbnailImage(ng-src="{{$ctrl.commentThumbnail}}")
 
