--- a/frontend/issues/jade/issuesList.jade
+++ b/frontend/issues/jade/issuesList.jade
@@ -1,11 +1,11 @@
-div(ng-switch="$ctrl.toShow", tabindex="0", tdr-focus="true")
+div(ng-switch="$ctrl.toShow", tabindex="0", tdr-focus="true", ng-mousemove="$ctrl.initSetFocus()")
 	// List
 	div(ng-switch-when="list")
 		.issueListItem(
 		ng-repeat="issue in $ctrl.issuesToShow"
 		layout="column"
 		ng-click="$ctrl.select($event, issue)"
-		ng-mouseenter="$ctrl.setFocus($event, issue, $index)"
+		ng-mouseenter="$ctrl.setFocus(issue, $index)"
 		ng-mouseleave="$ctrl.removeFocus($event, issue)"
 		ng-class="{issueListItemFocus: issue.focus}")
 			#issuesListItemContent(layout='row')
