ISSUE #250 - Remove any outline from issues list

--- a/frontend/issues/jade/issuesList.jade
+++ b/frontend/issues/jade/issuesList.jade
@@ -1,4 +1,4 @@
-div(ng-switch="$ctrl.toShow", tabindex="0", tdr-focus="true", ng-mousemove="$ctrl.initSetFocus()")
+#issuesListContainer(ng-switch="$ctrl.toShow", tabindex="0", tdr-focus="true", ng-mousemove="$ctrl.initSetFocus()")
 	// List
 	div(ng-switch-when="list")
 		.issueListItem(
