--- a/frontend/issues/css/issues.css
+++ b/frontend/issues/css/issues.css
@@ -317,6 +317,10 @@ issues-list .issueListItemThumbnail {
   margin-left: -15px;
 }
 
+issues-list #issuesListContainer {
+  outline: none;
+}
+
 /** Issue Comp ********************************************************************************************************/
 issue-comp #issueCompAll {
   outline: none;
