--- a/frontend/issues/jade/issue.jade
+++ b/frontend/issues/jade/issue.jade
@@ -1,6 +1,6 @@
 .issue(style="background:{{vm.backgroundColor}}")
 	// Header
-	issue-header(issue-data="vm.data")
+	//issue-header(issue-data="vm.data")
 
 	// Comments
 	div(ng-show="vm.showComments", ng-class="{issueComments: vm.showComments}", comments-height, num-new-comments="vm.numNewComments")
