--- a/frontend/issues/jade/issuesList.jade
+++ b/frontend/issues/jade/issuesList.jade
@@ -21,7 +21,7 @@
 						div(layout="row", layout-align="end", flex="30")
 							label {{issue.timeStamp}}
 					#issuesListItemDescription
-						label {{issue.desc}}
+						label(ng-bind-html="issue.desc | linky:'_blank'") {{issue.desc}}
 			md-divider
 
 			#issuesListItemEnter(ng-if="issue.selected", ng-click="$ctrl.editIssue(issue)", layout="column", layout-align="center center")
