--- a/frontend/revisions/jade/revisions.jade
+++ b/frontend/revisions/jade/revisions.jade
@@ -1,3 +1,3 @@
-.revisions-dropdown(ng-click="vm.openDialog()")
+.revisions-dropdown(ng-click="vm.openDialog($event)")
   | {{vm.project}} - {{vm.revName}}
   md-icon.angular-material-icons keyboard_arrow_down
