--- a/frontend/issues/jade/issueComp.jade
+++ b/frontend/issues/jade/issueComp.jade
@@ -74,7 +74,7 @@ div(flex, layout="column", layout-fill, tabindex="0", tdr-focus="true")
 				layout="row"
 				layout-align="center"
 				ng-if="$ctrl.descriptionThumbnail"
-				ng-click="$ctrl.showScreenShot($ctrl.issueData.viewpoint)")
+				ng-click="$ctrl.showScreenShot($event, $ctrl.issueData.viewpoint)")
 					img.issueCompThumbnailImage(ng-src="{{$ctrl.descriptionThumbnail}}")
 
 		// Comments
@@ -116,7 +116,7 @@ div(flex, layout="column", layout-fill, tabindex="0", tdr-focus="true")
 				layout="row"
 				layout-align="center"
 				ng-if="comment.viewpoint.screenshot"
-				ng-click="$ctrl.showScreenShot(comment.viewpoint)"
+				ng-click="$ctrl.showScreenShot($event, comment.viewpoint)"
 				flex)
 					img.issueCompThumbnailImage(ng-src="{{$ctrl.UtilsService.getServerUrl(comment.viewpoint.screenshot)}}")
 
