--- a/frontend/issues/css/issues.css
+++ b/frontend/issues/css/issues.css
@@ -298,7 +298,7 @@ issue-comp .issueCompThumbnail {
 }
 issue-comp .issueCompThumbnailImage:hover {
   cursor: pointer;
-  outline: solid 1px rgba(0, 0, 0, 0.2);
+  opacity: 0.8;
 }
 issue-comp .issueCompThumbnailImage {
   width: 100%;
@@ -318,7 +318,7 @@ issue-comp .issueCompCommentOwner label {
 }
 
 issue-comp .issueCompComment {
-  margin: 10px 0;
+  margin: 0 0 5px;
 }
 
 issue-comp .issueCompCommentTitle {
@@ -342,7 +342,6 @@ issue-comp .issueCompComment:hover,
 issue-comp #issueCompDescription:hover {
   background: rgba(0,69,148,.1);
   cursor: pointer;
-  outline: solid 1px rgba(0, 0, 0, 0.2);
 }
 issue-comp .issueCompComment *:hover,
 issue-comp #issueCompDescription *:hover {
