ISSUE #250 - New issue in multi mode objects selected, login link on signup form

--- a/frontend/signUp/jade/signUpForm.jade
+++ b/frontend/signUp/jade/signUpForm.jade
@@ -26,4 +26,6 @@ form
 			p Signing up...
 			md-progress-circular(md-mode="indeterminate", md-diameter="20")
 	h4.registerError {{vm.registerErrorMessage}}
-	a.registerLinks(target="_blank", href="/pricing") Pricing
+	div
+		a.registerLinks(target="_blank", href="/pricing") Pricing
+		a.registerLinks(href="/") Log in
