#262 notification filter by revisions

--- a/frontend/issues/jade/issues.jade
+++ b/frontend/issues/jade/issues.jade
@@ -45,6 +45,7 @@ md-progress-circular.importBCFLoading(md-mode="indeterminate", md-diameter="15",
 	issue-created="vm.issueCreated(issue)"
 	content-height="vm.setContentHeight(height)"
 	selected-objects="vm.selectedObjects"
+	revision="vm.revision"
 	set-initial-selected-objects="vm.setInitialSelectedObjects({selectedObjects: selectedObjects})"
 	user-roles="vm.projectUserRoles")
 
