--- a/frontend/account/jade/projectDialog.jade
+++ b/frontend/account/jade/projectDialog.jade
@@ -25,9 +25,9 @@ md-dialog.newProjectDialog(aria-label="New project")
 
 
 			md-input-container(ng-if="vm.newProjectFileSelected")
-				input(placeholder="Revision name", ng-model="vm.tag")
+				input(placeholder="Revision name (optional)", ng-model="vm.tag")
 			md-input-container(ng-if="vm.newProjectFileSelected")
-				textarea(placeholder="Revision description", ng-model="vm.desc")
+				textarea(placeholder="Revision description (optional)", ng-model="vm.desc")
 
 			md-input-container
 				md-button.md-accent(ng-click="vm.uploadFileForNewProject()") Upload File
