--- a/frontend/account/jade/uploadProjectDialog.jade
+++ b/frontend/account/jade/uploadProjectDialog.jade
@@ -7,20 +7,17 @@ md-dialog.newProjectDialog(aria-label="New project")
 				md-icon.angular-material-icons(aria-label="Close dialog") close
 	md-content(layout-margin)
 		div(layout="column")
-
-			md-input-container
-				input(placeholder="Revision name", ng-model="vm.tag")
-
-			md-input-container
-				textarea(placeholder="Revision description", ng-model="vm.desc")
-
 			md-input-container
 				md-button.md-accent(ng-click="vm.selectFile()") Select File
-				md-button.md-raised.md-accent(ng-disabled="vm.newProjectButtonDisabled", ng-click="vm.uploadFile()") Upload
+				md-button.md-raised.md-accent(ng-disabled="!vm.selectedFile", ng-click="vm.uploadFile()") Upload
 
-			p#projectDialogError(ng-if="vm.uploadErrorMessage") {{vm.uploadErrorMessage}}
-			
 			#projectDialogFilenameContainer(layout="row", ng-if="vm.selectedFile")
 				p#projectDialogFilenameIntro Selected file
 				p#projectDialogFilename {{vm.selectedFile.name}}
 
+			md-input-container
+				input(placeholder="Revision name (optional)", ng-model="vm.tag")
+			md-input-container
+				textarea(placeholder="Revision description (optional)", ng-model="vm.desc")
+
+			p#projectDialogError(ng-if="vm.uploadErrorMessage") {{vm.uploadErrorMessage}}
