--- a/frontend/issues/jade/issuesList.jade
+++ b/frontend/issues/jade/issuesList.jade
@@ -8,11 +8,12 @@
 		ng-mouseenter="$ctrl.setFocus(issue, $index)"
 		ng-mouseleave="$ctrl.removeFocus($event, issue)"
 		ng-class="{issueListItemFocus: issue.focus}")
+			.issueJustClosed(ng-if="issue.justClosed" flex="none")
+				.closedText This issue is now closed
 			#issuesListItemContent(layout='row')
 				.issueListItemThumbnail(layout="column", layout-align="center center", ng-if="issue.thumbnail")
 					img(ng-src="{{$ctrl.UtilsService.getServerUrl(issue.thumbnail)}}")
 				div(flex, layout="column")
-					label(ng-if="issue.justClosed" flex="none") This issue is now closed
 					label#issuesListItemTitle(flex="none") {{issue.title}}
 					#issuesListItemInfo(layout="row", layout-align="start center", flex="none")
 						div(flex="15")
