#262 merge 250 and fix file upload project

--- a/frontend/account/jade/accountProjects.jade
+++ b/frontend/account/jade/accountProjects.jade
@@ -26,6 +26,7 @@
 				user-account="vm.account"
 				on-upload-file="vm.uploadFile(project)"
 				uploaded-file="vm.uploadedFile"
+				project-to-upload="vm.projectToUpload"
 				on-show-page="vm.showPage(page, callingPage)"
 				on-setup-delete-project="vm.setupDeleteProject(event, project)",
 				quota="vm.quota"
