--- a/frontend/account/jade/uploadProjectDialog.jade
+++ b/frontend/account/jade/uploadProjectDialog.jade
@@ -10,7 +10,7 @@ md-dialog.newProjectDialog(aria-label="New project")
 
 			md-input-container
 				md-button.md-accent(ng-click="vm.selectFile()") Select File
-				md-button.md-raised.md-accent(ng-disabled="!vm.selectedFile", ng-click="vm.uploadFile()") Upload
+				md-button.md-raised.md-accent(ng-disabled="vm.uploadButtonDisabled", ng-click="vm.uploadFile()") Upload
 
 			#projectDialogFilenameContainer(layout="row", ng-if="vm.selectedFile")
 				p#projectDialogFilenameIntro Selected file
