--- a/frontend/issues/jade/issueComp.jade
+++ b/frontend/issues/jade/issueComp.jade
@@ -39,7 +39,7 @@ div(flex, layout="column", layout-fill, tabindex="0", tdr-focus="true")
 						md-option(ng-repeat="status in $ctrl.statuses", value="{{status.value}}") {{status.label}}
 				md-input-container(flex)
 					label Type
-					md-select(ng-model="$ctrl.issueData.topic_type", ng-disabled="!$ctrl.canUpdate")
+					md-select(ng-model="$ctrl.issueData.topic_type", ng-change="$ctrl.statusChange()", ng-disabled="!$ctrl.canUpdate")
 						md-option(ng-repeat="type in $ctrl.topic_types", value="{{type.value}}") {{type.label}}
 
 	md-divider
