ISSUE #278 - use shared_id when creating groups

--- a/frontend/issues/jade/issues.jade
+++ b/frontend/issues/jade/issues.jade
@@ -30,6 +30,7 @@ md-progress-circular.importBCFLoading(md-mode="indeterminate", md-diameter="15",
 	keys-down="vm.keysDown"
 	content-height="vm.setContentHeight(height)"
 	menu-option="vm.selectedMenuOption"
+	tree-map="vm.treeMap"
 	selected-issue="vm.selectedIssue")
 
 	// Issue
