--- a/frontend/project/jade/project.jade
+++ b/frontend/project/jade/project.jade
@@ -17,6 +17,7 @@
 		branch="vm.branch"
 		revision="vm.revision"
 		position="left"
+		tree-map="vm.treeMap"
 		style="pointer-events:{{vm.pointerEvents}}"
 		keys-down="vm.keysDown"
 		selected-objects="vm.selectedObjects"
@@ -40,5 +41,6 @@ project="vm.project"
 keys-down="vm.keysDown"
 send-event="vm.sendEvent(type, value)"
 event="vm.event"
+tree-map="vm.treeMap"
 set-selected-objects="vm.setSelectedObjects(selectedObjects)"
 initial-selected-objects="vm.initialSelectedObjects")
