--- a/frontend/issues/jade/issues.jade
+++ b/frontend/issues/jade/issues.jade
@@ -46,6 +46,7 @@ md-progress-circular.importBCFLoading(md-mode="indeterminate", md-diameter="15",
 	content-height="vm.setContentHeight(height)"
 	selected-objects="vm.selectedObjects"
 	set-initial-selected-objects="vm.setInitialSelectedObjects({selectedObjects: selectedObjects})"
-	user-roles="vm.projectUserRoles")
+	user-roles="vm.projectUserRoles",
+	available-roles="vm.availableRoles")
 
 
