--- a/frontend/issues/css/issues.css
+++ b/frontend/issues/css/issues.css
@@ -79,9 +79,10 @@ issues .importBCFLoading {
 }
 
 issues #issueRoleIndicator {
-  height: 2px;
-  background: #000000;
+  height: 4px;
+  background: #999999;
   margin-bottom: 10px;
+  border-radius: 2px;
 }
 
 /** Issue *************************************************************************************************************/
