ISSUE #281 - Issue list highlight user role issues, "For approval" status changed to "In progress" when issue assigned

--- a/frontend/issues/jade/issueComp.jade
+++ b/frontend/issues/jade/issueComp.jade
@@ -2,7 +2,7 @@ div(flex, layout="column", layout-fill, tabindex="0", tdr-focus="true")
 	div
 		// Title
 		.issueCompItemContainer(layout="column", layout-align="start", flex)
-			#issueRoleIndicator(flex, style="color")
+			#issueRoleIndicator
 
 			div(ng-if="!$ctrl.data", flex, layout="column")
 				md-input-container.issueComp(flex)
