--- a/frontend/issues/jade/issues.jade
+++ b/frontend/issues/jade/issues.jade
@@ -30,7 +30,8 @@ md-progress-circular.importBCFLoading(md-mode="indeterminate", md-diameter="15",
 	keys-down="vm.keysDown"
 	content-height="vm.setContentHeight(height)"
 	menu-option="vm.selectedMenuOption"
-	selected-issue="vm.selectedIssue")
+	selected-issue="vm.selectedIssue",
+	user-roles="vm.projectUserRoles")
 
 	// Issue
 	issue-comp(
